--- a/src/app/lead/lead.component.html
+++ b/src/app/lead/lead.component.html
@@ -2,7 +2,7 @@
 <div class="custom-container">
   <div class="row">
     <div class="col-md-4">
-      <h4>Status {{action}}</h4>
+      <h4>Lead {{action}}</h4>
     </div>
     <div class="col-md-2">
       <button class="btn btn-primary buttom"> <i class="nav-icon fa fa-plus" aria-hidden="true" (click)="new()"></i></button>
@@ -40,19 +40,38 @@
           </tr>
         </tbody>
       </table>
-
     </div>
   </div>
   <div class="row">
-    <div class="col-md-8 border" *ngIf="statusSave.showFields">
+    <div class="col-md-8 border" *ngIf="leadSave.showFields">
       <div class="form-group">
-        <label>Nome</label>
-        <div class="row">
-          <div class="col-md-6">
-            <input type="text" class="form-control" [(ngModel)]="statusSave.name">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label>Nome *</label>
+              <input type="text" class="form-control" [(ngModel)]="leadSave.name">
+            </div>
+            <div class="form-group col-md-6">
+              <label>Telefone</label>
+              <input type="text" class="form-control" [(ngModel)]="leadSave.phone" mask="(00) 00000 0000">
+            </div>
           </div>
-          <div class="col-md-2">
-            <button class="btn btn-primary buttom" (click)="saveStatus()">Salvar</button>
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label>E-mail</label>
+              <input type="text" class="form-control" [(ngModel)]="leadSave.email">
+            </div>
+            <div class="form-group col-md-6">
+              <label>Status</label>
+              <select class="form-control" [(ngModel)]="leadSave.statusId">
+                <option *ngFor="let statusItem of statusList" value={{statusItem.id}}>
+                  {{statusItem.name}}
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="row col-md-12">
+            <button class="btn btn-primary login-button buttom" (click)="saveLead()">Salvar</button>
           </div>
         </div>
       </div>
