--- a/src/app/lead/lead.component.html
+++ b/src/app/lead/lead.component.html
@@ -44,7 +44,7 @@
             <td>{{item.email}}</td>
             <td>{{item.statusName}}</td>
             <td>{{item.lastUpdateDate}}</td>
-            <td><i class="fa fa-trash" style="cursor:pointer" (click)="deleteStatus(item.id)"></i></td>
+            <td><i class="fa fa-trash" style="cursor:pointer" (click)="deleteLead(item.id)"></i></td>
           </tr>
         </tbody>
       </table>
