Inclusão de logo

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,6 +3,9 @@
   <div class="row">
     <div class="col-md"></div>
     <div class="col-md">
+      <div class="login-logo-container">
+        <img src="../../assets/dist/img/logo.png" class="login-logo">
+      </div>
       <div class="form-group">
         <label>Usuário</label>
         <input type="text" class="form-control" [(ngModel)]="login.userName">
