--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,11 +7,11 @@
         <img src="../../assets/dist/img/logo.png" class="login-logo">
       </div>
       <div class="form-group">
-        <label>Usuário</label>
+        <label>Usuário *</label>
         <input type="text" class="form-control" [(ngModel)]="login.userName">
       </div>
       <div class="form-group">
-        <label>Senha</label>
+        <label>Senha *</label>
         <input type="password" class="form-control" [(ngModel)]="login.password">
       </div>
       <button class="btn btn-primary login-button buttom" (click)="toLogin()">Login</button>
