--- a/src/app/status/status.component.html
+++ b/src/app/status/status.component.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-md-8 border" *ngIf="statusSearch.showSearchBox">
       <div class="form-group">
-        <label>Nome contém</label>
+        <label>Nome contém *</label>
         <div class="row">
           <div class="col-md-6">
             <input type="text" class="form-control" [(ngModel)]="statusSearch.nameContain">
