--- a/src/app/opportunity/opportunity.component.html
+++ b/src/app/opportunity/opportunity.component.html
@@ -1,1 +1,78 @@
-<p>opportunity works!</p>
+<app-loading *ngIf="loading"></app-loading>
+<div class="custom-container">
+  <div class="row">
+    <div class="col-md-4">
+      <h4>Oportunidade {{action}}</h4>
+    </div>
+    <div class="col-md-2">
+      <button class="btn btn-primary buttom"> <i class="nav-icon fa fa-plus" aria-hidden="true" (click)="new()"></i></button>
+    </div>
+  </div>   
+  <br> 
+  <div class="row">
+    <div class="col-md-10 border" *ngIf="opportunitySearch.showSearchBox">
+      <div class="form-group">
+        <div class="row">
+            <div class="form-group col-md-4">
+                <label>Lead</label>
+                <select class="form-control" [(ngModel)]="opportunitySearch.leadId">
+                  <option *ngFor="let opportunityItem of opportunityList" value={{opportunityItem.id}}>
+                      {{opportunityItem.name}}
+                  </option>
+                </select>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Descrição contém</label>
+              <input type="text" class="form-control" [(ngModel)]="opportunitySearch.descriptionContain">
+            </div>
+            <div class="form-group col-md-4">
+                <button class="btn btn-primary buttomNew" (click)="getOpportunitySearch()">Pesquisar</button>
+            </div>
+        </div>
+      </div>
+      <table class="table table-striped table-bordered" id="myTable" *ngIf="opportunitySearch.responseHasItem">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Id</th>
+            <th scope="col">Lead</th>
+            <th scope="col">Descrição</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of opportunitySearch.responseList">
+            <td><i class="fa fa-edit" style="cursor:pointer" (click)="edit(item.id)"></i></td>
+            <td>{{item.id}}</td>
+            <td>{{item.leadName}}</td>
+            <td>{{item.description}}</td>
+            <td><i class="fa fa-trash" style="cursor:pointer" (click)="deleteOpportunity(item.id)"></i></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 border" *ngIf="opportunitySave.showFields">
+      <div class="form-group">
+        <div class="col-md-12">
+            <div class="form-group col-md-12">
+                <label>Descrição *</label>
+                <input type="text" class="form-control" [(ngModel)]="opportunitySave.description">
+            </div>
+            <div class="form-group col-md-12">
+                <label>Lead *</label>
+                <select class="form-control" [(ngModel)]="opportunitySave.leadId">
+                  <option *ngFor="let opportunityItem of opportunityList" value={{opportunityItem.id}}>
+                    {{opportunityItem.name}}
+                  </option>
+                </select>
+            </div>
+            <div class="form-group col-md-12">
+                <button class="btn btn-primary login-button buttom" (click)="saveOpportunity()">Salvar</button>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
